# aoc

./: .gitignore  LICENSE  README.md
2015/day 10/: 1.py
2015/day 11/: 1.py
2015/day 12/: 1.py
2015/day 13/: 2.py
2015/day 14/: 1.py  2.py
2015/day 15/: 2.py
2015/day 16/: 1.py  2.py
2015/day 17/: 1.py
2015/day 18/: 1.py  2.py
2015/day 19/: 1.py
2015/day 2/: 1.py  2.py
2015/day 21/: 1.py  2.py
2015/day 3/: 1.py  2.py
2015/day 4/: 2.py
2015/day 5/: 1.py  2.py
2015/day 6/: 1.py  2.py
2015/day 8/: 1.py  2.py
2015/day1/: 1.py  2.py
2015/day12/: 2.py
2015/day13/: 1.py
2015/day15/: 1.py
2015/day17/: 2.py
2015/day19/: 2.py
2015/day20/: 1.py  2.py
2015/day21/: 1.py
2015/day22/: 1.py  2.py
2023/: CMakeLists.txt  includes.h
2023/day1/: day1.cpp  day1.h
2023/day10/: day10.cpp  day10.h
2023/day11/: day11.cpp  day11.h
2023/day12/: day12.cpp  day12.h
2023/day13/: day13.cpp  day13.h
2023/day14/: day14.cpp  day14.h
2023/day15/: day15.cpp  day15.h
2023/day16/: day16.cpp  day16.h
2023/day17/: day17.cpp  day17.h
2023/day18/: day18.cpp  day18.h
2023/day19/: day19.cpp  day19.h
2023/day2/: day2.cpp  day2.h
2023/day20/: day20.cpp  day20.h
2023/day21/: day21.cpp  day21.h
2023/day22/: day22.cpp  day22.h
2023/day23/: day23.cpp  day23.h
2023/day24/: day24.cpp  day24.h
2023/day25/: day25.cpp  day25.h
2023/day3/: day3.cpp  day3.h
2023/day4/: day4.cpp  day4.h
2023/day5/: day5.cpp  day5.h
2023/day6/: day6.cpp  day6.h
2023/day7/: day7.cpp  day7.h
2023/day8/: day8.cpp  day8.h
2023/day9/: day9.cpp  day9.h
(+60 files in other folders)
