cmake_minimum_required(VERSION 3.27)
project(advent_of_code_2023)

set(CMAKE_CXX_STANDARD 20)

add_executable(advent_of_code_2023 main.cpp
        includes.h
        "day1/day1.cpp"
        "day1/day1.h"
        "day2/day2.cpp"
        "day2/day2.h"
        "day3/day3.cpp"
        "day3/day3.h"
        "day4/day4.cpp"
        "day4/day4.h"
        "day5/day5.cpp"
        "day5/day5.h"
        "day6/day6.cpp"
        "day6/day6.h"
        "day7/day7.cpp"
        "day7/day7.h"
        "day8/day8.cpp"
        "day8/day8.h"
        "day9/day9.cpp"
        "day9/day9.h"
        "day10/day10.cpp"
        "day10/day10.h"
        "day11/day11.cpp"
        "day11/day11.h"
        "day12/day12.cpp"
        "day12/day12.h"
        "day13/day13.cpp"
        "day13/day13.h"
        "day14/day14.cpp"
        "day14/day14.h"
        "day15/day15.cpp"
        "day15/day15.h"
        "day16/day16.cpp"
        "day16/day16.h"
        "day17/day17.cpp"
        "day17/day17.h"
        "day18/day18.cpp"
        "day18/day18.h"
        "day19/day19.cpp"
        "day19/day19.h"
        "day20/day20.cpp"
        "day20/day20.h"
        "day21/day21.cpp"
        "day21/day21.h"
        "day22/day22.cpp"
        "day22/day22.h"
        "day23/day23.cpp"
        "day23/day23.h"
        "day24/day24.cpp"
        "day24/day24.h"
        "day25/day25.cpp"
        "day25/day25.h"
)
